# fastcdc-rs

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.org  build.rs
.claude/skills/pr-review/: SKILL.md
.github/workflows/: test.yml
benches/: chunking.rs
examples/: async2020.rs  dedupe.rs  ronomon.rs  stream2016.rs  stream2020.rs  table32.rs  table64.rs  table64ls.rs  v2016.rs  v2020.rs  v2020_cut.rs
examples/dedupe/: Cargo.toml  README.md
examples/dedupe/src/: main.rs
src/: lib.rs  table.rs
src/chunker/: mod.rs
src/chunker/ronomon/: mod.rs
src/chunker/v2016/: mod.rs
src/chunker/v2020/: mod.rs
src/ronomon/: mod.rs
src/v2016/: mod.rs
src/v2020/: async_stream_cdc.rs  mod.rs
