[package]
name = "fastcdc"
version = "3.2.1"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
edition = "2018"
description = "FastCDC (content defined chunking) in pure Rust."
repository = "https://github.com/nlfiedler/fastcdc-rs"
readme = "README.md"
keywords = ["cdc", "chunking"]
license = "MIT"
exclude = [
    "TODO.org",
    "test/*",
]

[package.metadata.docs.rs]
features = ["futures"]

[features]
default = []
tokio = ["dep:tokio", "tokio-stream", "async-stream"]
futures = ["dep:futures"]

[dev-dependencies]
aes = "0.8.2"
byteorder = "1.4.3"
clap = { version = "4.2.1", features = ["cargo"] }
ctr = "0.9.2"
md-5 = "0.10.5"
memmap2 = "0.9.5"
tokio = { version = "1", features = ["fs", "io-util", "rt", "rt-multi-thread", "macros"] }
futures-test = { version = "0.3" }

[dependencies]
futures = { version = "0.3", optional = true }
tokio = { version = "1", features = ["io-util"], optional = true }
tokio-stream = { version = "0.1", optional = true }
async-stream = { version = "0.3", optional = true }

[[example]]
name = "async2020"
required-features = ["tokio"]
