[package]
name = "fastcdc"
version = "4.0.1"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
edition = "2024"
description = "FastCDC (content defined chunking) in pure Rust."
repository = "https://github.com/nlfiedler/fastcdc-rs"
readme = "README.md"
keywords = ["cdc", "chunking"]
license = "MIT"
exclude = ["TODO.org", "test/*"]

[package.metadata.docs.rs]
features = ["futures"]

[features]
default = []
tokio = ["dep:tokio", "tokio-stream", "async-stream"]
futures = ["dep:futures"]

[dev-dependencies]
aes = "0.9.0"
blake3 = "1.8.4"
byteorder = "1.4.3"
clap = { version = "4.2.1", features = ["cargo"] }
ctr = "0.10.0"
md-5 = "0.11.0"
memmap2 = "0.9.5"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "rt",
    "rt-multi-thread",
    "macros",
] }
futures-test = { version = "0.3" }

[dependencies]
futures = { version = "0.3", optional = true }
tokio = { version = "1", features = ["io-util"], optional = true }
tokio-stream = { version = "0.1", optional = true }
async-stream = { version = "0.3", optional = true }

[[example]]
name = "async2020"
required-features = ["tokio"]
